@@ -3810,6 +3810,18 @@ way.  Also, because packages are linked against @R{} they are on some
 OSes also linked against the dynamic libraries @R{} itself is linked
 against, and this can lead to symbol conflicts.
 
+For maximally effective use of @command{valgrind}, @R{} should be
+compiled with valgrind instrumentation. The @command{configure} option
+is @option{--with-valgrind-instrumentation=@var{level}}, where
+@var{level} is 0, 1, 2 or 3.  (Level 0 is the default and does not add
+any anything.)  The system headers for @command{valgrind} can be
+requested by option @option{--with-system-valgrind-headers}: they will
+be used if present (on Linux they may be in a separate package such as
+@pkg{valgrind-devel}).  Note though that there is no guarantee that the
+code in @R{} will be compatible with future @command{valgrind} headers.
+(An incompatible change was made in @command{valgrind} version 3.10.0 and
+currently level 3 does not work with such headers.)
+
 If you need to re-configure @R{} with different options you may need to run
 @code{make clean} or even @code{make distclean} before doing so.
 
