@@ -68,7 +68,19 @@
 #endif
 
 #ifndef NVALGRIND
+# ifdef HAVE_VALGRIND_MEMCHECK_H
 # include "valgrind/memcheck.h"
+# else
+// internal version of headers.
+# include "vg/memcheck.h"
+# endif
+// for later external headers: currently only levels 1 and 2 work.
+# if defined(__VALGRIND_MAJOR__) && defined(__VALGRIND_MINOR__)   \
+    && (__VALGRIND_MAJOR__ > 3 || (__VALGRIND_MAJOR__ == 3 && __VALGRIND_MINOR__ >= 10))
+#  define VALGRIND_MAKE_NOACCESS VALGRIND_MAKE_MEM_NOACCESS
+#  define VALGRIND_MAKE_READABLE VALGRIND_MAKE_MEM_DEFINED
+#  define VALGRIND_MAKE_WRITABLE VALGRIND_MAKE_MEM_UNDEFINED
+# endif
 #endif
 
 
